--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "test": "jest",
     "build": "babel -d dist/ src/",
-    "start": "npm run build && node ./dist/index.js",
+    "start": "npm run build && node ./dist/index.js"
   },
   "babel": {
     "presets": [
